--- a/Capstone Customer Churn.ipynb
+++ b/Capstone Customer Churn.ipynb
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "W-d-roFQe6yi"
       },
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "MP62JaiKfCnS"
       },
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "KIQyG5EcfQlU"
       },
@@ -240,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -430,7 +430,7 @@
               "4           All-net 500F=2000F;5d           11.0      0  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -442,7 +442,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -626,7 +626,7 @@
               "4            4.0  "
             ]
           },
-          "execution_count": 6,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -638,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -647,7 +647,7 @@
               "((1077024, 19), (190063, 18))"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -658,7 +658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -674,7 +674,7 @@
               "        'TOP_PACK', 'FREQ_TOP_PACK'], dtype=object))"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -685,7 +685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -761,7 +761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -984,7 +984,7 @@
               "max    1.000000e+00  "
             ]
           },
-          "execution_count": 10,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1008,7 +1008,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -1051,7 +1051,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -1060,7 +1060,7 @@
               "0"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1079,7 +1079,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -1107,7 +1107,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1119,7 +1119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -1147,7 +1147,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1160,7 +1160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -1187,7 +1187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1217,7 +1217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {
         "id": "0VNR9LfZfbGe"
       },
@@ -1266,7 +1266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -1310,7 +1310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -1353,7 +1353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -1537,16 +1537,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x1b614cf50a0>"
+              "<seaborn.axisgrid.PairGrid at 0x2a9252e48e0>"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1569,7 +1569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -1614,7 +1614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -1641,7 +1641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -1747,7 +1747,7 @@
               "REGULARITY     -0.479746"
             ]
           },
-          "execution_count": 43,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1760,7 +1760,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -1788,7 +1788,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
@@ -1801,7 +1801,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 46,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1824,7 +1824,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1833,18 +1833,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Chi-square statistic: 0.0\n",
-            "P-value: 1.0\n",
-            "Degrees of freedom: 0\n",
-            "Expected frequencies: [[875031. 201993.]]\n",
-            "Fail to reject the null hypothesis. There is a significant relationship between high monthly charges and churn.\n"
+            "Chi-square statistic: 2898.5207691813353\n",
+            "P-value: 0.0\n",
+            "Reject the null hypothesis. There is no significant relationship between TENURE and CHURN.\n"
           ]
         }
       ],
@@ -1882,7 +1880,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -1932,7 +1930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
         {
@@ -1972,7 +1970,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -2020,7 +2018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -2068,7 +2066,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -2101,7 +2099,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -2156,7 +2154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
@@ -2204,7 +2202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -2260,7 +2258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 36,
       "metadata": {
         "id": "dIBrDy1Pmo2_"
       },
@@ -2280,7 +2278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 37,
       "metadata": {
         "id": "cbsbMbs1hDzo"
       },
@@ -2300,11 +2298,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 38,
       "metadata": {
         "id": "52POL1F8gLEa"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'SimpleImputer' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_25384\\1230420364.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Use sklearn.impute.SimpleImputer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mnum_imputer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSimpleImputer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstrategy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'median'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mcat_imputer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSimpleImputer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstrategy\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;34m'most_frequent'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'SimpleImputer' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# Use sklearn.impute.SimpleImputer\n",
         "num_imputer = SimpleImputer(strategy='median')\n",
@@ -2363,7 +2373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "fU5RQ0itegd4"
       },
@@ -2385,7 +2395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "99vphpwPgbUw"
       },
@@ -2405,7 +2415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "pf6WtuHphLBE"
       },
@@ -2425,7 +2435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "ySLn254IiujE"
       },
@@ -2466,7 +2476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "1Fjv6pJt1uoV"
       },
@@ -2486,7 +2496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "fgsct6LH1v9e"
       },
@@ -2506,7 +2516,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "9XBrsspR1wso"
       },
@@ -2526,7 +2536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "mWnGeGn0i3b0"
       },
@@ -2555,7 +2565,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "THTw7OjhmqaW"
       },
@@ -2575,7 +2585,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "uQMdz0JPmqaW"
       },
@@ -2595,7 +2605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "oz3-pxgDmqaW"
       },
@@ -2615,7 +2625,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "ORaQB1zLmqaW"
       },
@@ -2667,7 +2677,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "FpTEDK9RrlRl"
       },
@@ -2688,7 +2698,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "32mviWyGAMqP"
       },
